test/scc_test/decl/semantic-errors/057.t
void foo(int a, int)
{
}